--- a/css/styles.css
+++ b/css/styles.css
@@ -142,9 +142,35 @@ header {
   color: var(--accent-text-color);
 }
 
-.site-nav .link.current {
+.site-nav .current {
   color: var(--accent-text-color);
 }
+
+.site-nav {
+  position: relative;
+}
+
+.site-nav .current {
+  /* position: absolute; */
+  display: block;
+}
+
+.site-nav .current::after {
+  /* position: absolute; */
+  content: '';
+  top: 100%;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+ 
+
+  background: red;
+  border-radius: 2px;
+}
+
+
+
 
 /* Site auth */
 .site-auth {
