--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ header {
 }
 
 .site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .link:focus { 
   color: var(--accent-text-color);
 }
 
@@ -146,31 +146,16 @@ header {
   color: var(--accent-text-color);
 }
 
-.site-nav {
-  position: relative;
-}
-
-.site-nav .current {
-  /* position: absolute; */
-  display: block;
-}
 
 .site-nav .current::after {
-  /* position: absolute; */
   content: '';
-  top: 100%;
-  right: 0;
   display: block;
   width: 100%;
   height: 4px;
  
-
-  background: red;
+  background: var(--accent-text-color);
   border-radius: 2px;
 }
-
-
-
 
 /* Site auth */
 .site-auth {
