--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,6 @@ body {
  
 }
 
-
-
 /* Header */
 
 header {
@@ -103,11 +101,15 @@ header {
 }
 
 /* Whole header */
+
+.header-border {
+  border-bottom: 1px solid #ECECEC;
+}
+
 .topline {
   display: flex;
   align-items: center;
 }
-
 
 /* Main nav  */
 .main-nav {
@@ -276,7 +278,7 @@ header {
 }
 
 /* buttons for portfolio.html */
-.button-primary {
+/* .button-primary {
   display: inline-block;
   border-radius: 4px;
   padding: 6px 22px;
@@ -304,7 +306,29 @@ header {
   letter-spacing: 0.03em;
   color: var(--titles-text-color);
   background-color: var(--team-background-color);
+} */
+
+.button-portfolio {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+  text-align: center;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: var(--titles-text-color);
+  background-color: var(--team-background-color);
 }
+
+  .button-portfolio:hover,
+  .button-portfolio:focus {
+    color: var(--main-title-color);
+    background-color: var(--accent-text-color);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12),
+     0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+  }
 
 /* Advantages */
 .advantages {
