--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ header {
   letter-spacing: 0.02em;
   color: var(--titles-text-color);
   
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -178,7 +179,6 @@ header {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px; 
-  color: var(--primary-text-color);
 }
 
 .site-auth-button .link {
@@ -188,19 +188,23 @@ header {
   text-decoration: none;
   cursor: pointer;
   color: var(--primary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-auth-link {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--primary-text-color);
 }
 
 .site-auth-icon {
   width: 16px;
   height: 11px;
   margin-right: 10px;
+  fill: var(--primary-text-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-auth-button:hover a, 
@@ -210,7 +214,7 @@ header {
 
 .site-auth-button:hover svg, 
 .site-auth-button:focus svg {
-  --color4: var(--accent-text-color);
+  fill: var(--accent-text-color);
 }
 
 
