--- a/css/styles.css
+++ b/css/styles.css
@@ -281,37 +281,7 @@ header {
 
 }
 
-/* buttons for portfolio.html */
-/* .button-primary {
-  display: inline-block;
-  border-radius: 4px;
-  padding: 6px 22px;
-  text-align: center;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  background-color: var(--accent-text-color);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
-
-}
-
-.button-secondary {
-  display: inline-block;
-  border-radius: 4px;
-  padding: 6px 22px;
-  text-align: center;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  color: var(--titles-text-color);
-  background-color: var(--team-background-color);
-} */
-
+/* button for portfolio.html */
 .button-portfolio {
   display: inline-block;
   border-radius: 4px;
@@ -324,6 +294,10 @@ header {
   letter-spacing: 0.03em;
   color: var(--titles-text-color);
   background-color: var(--team-background-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
   .button-portfolio:hover,
@@ -495,8 +469,7 @@ header {
   text-align: center;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   background: #FFFFFF;
-  /* border-radius: 4px;
-  overflow: hidden; */
+  
 }
 
 .team-item + .team-item {
@@ -538,6 +511,10 @@ header {
   height: 44px;
   fill: var(--icons-color);
   border-radius: 50%;
+  background-color: var(--main-background-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon:hover,
@@ -670,6 +647,9 @@ header {
   fill: var(--main-title-color);
   border-radius: 50%;
   background-color: var(--icons-footer-background);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon:hover,
