--- a/css/styles.css
+++ b/css/styles.css
@@ -160,9 +160,17 @@ header {
   display: block;
   width: 100%;
   height: 4px;
- 
   background: var(--accent-text-color);
   border-radius: 2px;
+  
+  transform: scaleX(1);
+  transform-origin: bottom left;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav .current:hover::after {
+  transform: scaleX(0);
 }
 
 /* Site auth */
@@ -556,19 +564,23 @@ header {
   border: 1px solid var(--icons-color);
   border-radius: 4px;
   cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link:hover {
+  border-color: #2196F3;
 }
 
 .customers-icon {
   display: inline-flex; 
   fill: var(--icons-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover .customers-icon {
   fill: var(--accent-text-color);   
-}
-
-.customers-link:hover {
-  border-color: #2196F3;
 }
 
 
@@ -773,10 +785,58 @@ input::placeholder {
 
 .flex-examples-elements {
   width: calc((100% - 60px) / 3);
-  /* border-top-left-radius: 5px;
-  border-top-right-radius: 5px; */
+}
+
+.examples-overlay {
+  position: relative;
   overflow: hidden;
 }
+
+.examples-overlay:hover::before {
+  opacity: 1;
+}
+
+.examples-overlay:hover .examples-text {
+  opacity: 1;
+}
+
+.examples-overlay::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  z-index: 1;
+  opacity: 0;
+  
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.flex-examples-elements:hover .examples-overlay::before {
+  transform: translateY(0);
+}
+
+.examples .examples-text {
+  position: absolute;
+  display: block;
+  width: 322px;
+  height: 168px;
+  margin: 0;
+  bottom: 63px;
+  left: 24px;
+  z-index: 2;
+  
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: var(--main-title-color);
+  opacity: 0;
+
+}
+
 
 .flex-examples-elements:not(:nth-child(3n)) {
   margin-right: 30px;
@@ -829,15 +889,7 @@ input::placeholder {
   color: var(--primary-text-color);
 }
 
-.examples .examples-text {
-  display: none;   /* временно */
 
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  background-color: var(--accent-text-color); /* temporary */
-}
 
 .main {
   background-color: var(--main-title-color);
