--- a/css/styles.css
+++ b/css/styles.css
@@ -818,6 +818,11 @@ input::placeholder {
   transform: translateY(0);
 }
 
+/* Не могу понять, почему при ховере на этот див не появляется оверлей */
+.card-content:hover .examples-overlay::before {
+  transform: translateY(0);
+}
+
 .examples .examples-text {
   position: absolute;
   display: block;
@@ -834,7 +839,6 @@ input::placeholder {
   letter-spacing: 0.03em;
   color: var(--main-title-color);
   opacity: 0;
-
 }
 
 
@@ -849,17 +853,12 @@ input::placeholder {
 .flex-examples-elements:hover,
 .flex-examples-elements:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-  
 }
 
 .card-content {
   border-bottom: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
-  /* border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  overflow: hidden; */
-
 }
 
 .examples .examples-headings {
