--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,38 @@ body {
   margin-left: auto;
   margin-right: auto;
   /* outline: 1px solid red; */
- 
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(94, 212, 231, 0.5);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 600px;
+  min-height: 400px;
+  padding: 15px;
+  background-color: var(--main-background-color);
+}
+
+
+
+
 
 /* Header */
 
