--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(94, 212, 231, 0.5);
+  opacity: 1;
+  transition:  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -90,21 +92,23 @@ body {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-
+  
   min-width: 600px;
   min-height: 400px;
   padding: 15px;
   background-color: var(--main-background-color);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-
-
 
 /* Header */
 
