--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@ body {
   /* outline: 1px solid red; */
 }
 
+.main {
+  background-color: var(--main-title-color);
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -812,61 +816,6 @@ input::placeholder {
   width: calc((100% - 60px) / 3);
 }
 
-.examples-overlay {
-  position: relative;
-  overflow: hidden;
-}
-
-.flex-examples-elements:hover .examples-overlay::before{
-  opacity: 1;
-}
-
-.flex-examples-elements:hover .examples-text {
-  opacity: 1;
-}
-
-.examples-overlay::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: rgba(33, 150, 243, 0.9);
-  z-index: 1;
-  opacity: 0;
-  
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.flex-examples-elements:hover .examples-overlay::before {
-  transform: translateY(0);
-}
-
-/* Не могу понять, почему при ховере на этот див не появляется оверлей */
-.card-content:hover .examples-overlay::before {
-  transform: translateY(0);
-}
-
-.examples .examples-text {
-  position: absolute;
-  display: block;
-  width: 322px;
-  height: 168px;
-  margin: 0;
-  bottom: 63px;
-  left: 24px;
-  z-index: 2;
-  
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  color: var(--main-title-color);
-  opacity: 0;
-}
-
-
 .flex-examples-elements:not(:nth-child(3n)) {
   margin-right: 30px;
 }
@@ -913,9 +862,54 @@ input::placeholder {
   color: var(--primary-text-color);
 }
 
-
-
-.main {
-  background-color: var(--main-title-color);
+/* Blue overlay on cards */
+.examples-overlay {
+  position: relative;
+  overflow: hidden;
 }
+
+.flex-examples-elements:hover .examples-overlay::before{
+  opacity: 1;
+}
+
+.flex-examples-elements:hover .examples-text {
+  opacity: 1;
+}
+
+.examples-overlay::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  z-index: 1;
+  opacity: 0;
+  
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.flex-examples-elements:hover .examples-overlay::before {
+  transform: translateY(0);
+}
+
+.examples .examples-text {
+  position: absolute;
+  display: block;
+  width: 322px;
+  height: 168px;
+  margin: 0;
+  bottom: 63px;
+  left: 24px;
+  z-index: 2;
+  
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: var(--main-title-color);
+  opacity: 0;
+}
+
 
